incorporé carousel y pagination usando boostrap

--- a/pages/libros2.html
+++ b/pages/libros2.html
@@ -45,76 +45,56 @@
             </aside>
             <div class="libros">
                 <article class="cards-article">
-                    <h4>Los días de la revolución</h4>
-                    <img src="../images/libro1.jpeg" alt=""> <br>
+                    <h4>Palabras cruzadas</h4>
+                    <img src="../images/libro13.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>El hechizo del agua</h4>
-                    <img src="../images/libro2.jpeg" alt=""> <br>
+                    <h4>Heartstopper</h4>
+                    <img src="../images/libro14.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>Violeta</h4>
-                    <img src="../images/libro3.jpeg" alt=""> <br>
+                    <h4>La sombra del viento</h4>
+                    <img src="../images/libro15.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>Nuestra parte de noche</h4>
-                    <img src="../images/libro4.jpeg" alt=""> <br>
+                    <h4>El gato que amaba los libros</h4>
+                    <img src="../images/libro16.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>El susurro de las mujeres</h4>
-                    <img src="../images/libro5.jpeg" alt=""> <br>
+                    <h4>El caso Alaska Sanders</h4>
+                    <img src="../images/libro17.jpg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>Las tejedoras de ilusiones</h4>
-                    <img src="../images/libro6.jpeg" alt=""> <br>
+                    <h4>El Duque de Wyndham</h4>
+                    <img src="../images/libro18.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>La casa de las grietas</h4>
-                    <img src="../images/libro7.jpeg" alt=""> <br>
+                    <h4>Rota se camina igual</h4>
+                    <img src="../images/libro19.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <article class="cards-article">
-                    <h4>Boulevard</h4>
-                    <img src="../images/libro8.jpeg" alt=""> <br>
-                    <button>Agregar al carrito</button>
-                </article>
-                <article class="cards-article">
-                    <h4>La tía Cósima</h4>
-                    <img src="../images/libro9.jpeg" alt=""> <br>
-                    <button>Agregar al carrito</button>
-                </article>
-                <article class="cards-article">
-                    <h4>Una vida en Oxford</h4>
-                    <img src="../images/libro10.jpeg" alt=""> <br>
-                    <button>Agregar al carrito</button>
-                </article>
-                <article class="cards-article">
-                    <h4>Serendipity</h4>
-                    <img src="../images/libro11.jpeg" alt=""> <br>
-                    <button>Agregar al carrito</button>
-                </article>
-                <article class="cards-article">
-                    <h4>Mujeres que corren con los lobos</h4>
-                    <img src="../images/libro12.jpeg" alt=""> <br>
+                    <h4>Cuánto vale una heladera</h4>
+                    <img src="../images/libro20.jpeg" alt=""> <br>
                     <button>Agregar al carrito</button>
                 </article>
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
                       <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
+                        <a class="page-link" href="./libros.html" aria-label="Previous">
                           <span aria-hidden="true">&laquo;</span>
                         </a>
                       </li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="./libros2.html">2</a></li>
+                      <li class="page-item"><a class="page-link" href="./libros.html">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
                       <li class="page-item">
-                        <a class="page-link" href="./libros2.html" aria-label="Next">
+                        <a class="page-link" href="#" aria-label="Next">
                           <span aria-hidden="true">&raquo;</span>
                         </a>
                       </li>
