--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inefable - Librería</title>
     <link rel="icon" href="https://fav.farm/📚" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -29,11 +30,32 @@
         <h1>Bienvenidos a Librería Inefable </h1>
         <section>
             <h2>Novedades</h2>
-            <div class="carrousel">
-                <img src="./images/carrousel1.jpg" alt="libros">
-                <img src="./images/carrousel2.jpg" alt="libros">
-                <img src="./images/carrousel3.jpg" alt="libros">
-            </div>
+            <div id="carouselExampleControls" class="carousel slide w-50 m-auto my-5" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./images/carrousel1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/carrousel2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/carrousel3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <!-- <div class="carrousel">
+                <img src="" alt="libros">
+                <img src="" alt="libros">
+                <img src="" alt="libros">
+            </div> -->
         </section>
         <h2>Los más vendidos</h2>
         <section class="cards">
@@ -94,6 +116,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
