--- a/index.html
+++ b/index.html
@@ -13,49 +13,59 @@
 
 <body>
     <header>
-        <div>
+        <div id="header">
             <a href=""><img src="./images/logo.png" alt="logo"></a>
         </div>
-        <nav>
-            <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="./pages/libros.html">Libros</a></li>
-                <li><a href="./pages/club.html">Club de Lectura</a></li>
-                <li><a href="./pages/nosotros.html">Acerca de nosotros</a></li>
-                <li><a href="./pages/contacto.html">Contactanos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg" id="navbar">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse  navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
+                        <ul>
+                            <li><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+                            <li><a class="nav-link" href="./pages/libros.html">Libros</a></li>
+                            <li><a class="nav-link" href="./pages/club.html">Club de Lectura</a></li>
+                            <li><a class="nav-link" href="./pages/nosotros.html">Acerca de nosotros</a></li>
+                            <li><a class="nav-link" href="./pages/contacto.html">Contactanos</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <h1>Bienvenidos a Librería Inefable </h1>
         <section>
             <h2>Novedades</h2>
-            <div id="carouselExampleControls" class="carousel slide w-50 m-auto my-5" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./images/carrousel1.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/carrousel2.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/carrousel3.jpg" class="d-block w-100" alt="...">
-                  </div>
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide m-4" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/carrousel1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carrousel2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carrousel3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            <!-- <div class="carrousel">
-                <img src="" alt="libros">
-                <img src="" alt="libros">
-                <img src="" alt="libros">
-            </div> -->
+            </div>
         </section>
         <h2>Los más vendidos</h2>
         <section class="cards">
@@ -116,7 +126,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
