--- a/pages/libros2.html
+++ b/pages/libros2.html
@@ -7,24 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inefable - Librería</title>
     <link rel="icon" href="https://fav.farm/📚" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <a href="../index.html"><img src="../images/logo.png" alt="logo"></a>
+        <div id="header">
+            <a href=""><img src="../images/logo.png" alt="logo"></a>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./libros.html">Libros</a></li>
-                <li><a href="./club.html">Club de Lectura</a></li>
-                <li><a href="./nosotros.html">Acerca de nosotros</a></li>
-                <li><a href="./contacto.html">Contactanos</a></li>
-            </ul>
-        </nav>
-
+        <nav class="navbar navbar-expand-lg align-items-center" id="navbar">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto">
+                    <ul>
+                  <li><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                  <li><a class="nav-link" href="./libros.html">Libros</a></li>
+                  <li><a class="nav-link" href="./club.html">Club de Lectura</a></li>
+                  <li><a class="nav-link" href="./nosotros.html">Acerca de nosotros</a></li>
+                  <li><a class="nav-link" href="./contacto.html">Contactanos</a></li>
+                </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h1>Libros</h1>
@@ -118,6 +127,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
