--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inefable - Librería</title>
+    <meta name="keywords" content="librería, comprar libros, lectura, club de lectura, libros">
+    <meta name="description" content="Inefable es una librería que no solo ofrece una aplia variedad de libros, sino que también es un espacio de lectura y encuentro">
+    <title>Librería Inefable</title>
     <link rel="icon" href="https://fav.farm/📚" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
