actualicé contenido en club.html y nosotros.html

--- a/pages/club.html
+++ b/pages/club.html
@@ -40,22 +40,8 @@
     <main>
         <h1>Club de Lectura</h1>
         <section class="sectionClub">
-            <img src="../images/club.jpg" alt="persona leyendo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, mollitia? Officiis repellendus ut
-                modi atque quam rem totam animi autem dolores sit? Ratione temporibus quo provident alias! Quas,
-                necessitatibus nam?
-                Excepturi nostrum tempore earum unde, velit aperiam odit dolorem dignissimos consequatur, molestiae
-                libero! Eius nostrum error, doloribus ut rem minima cumque, temporibus reprehenderit pariatur eligendi
-                cum placeat illum recusandae blanditiis.
-                Nemo natus autem doloribus voluptates officia corrupti aspernatur libero qui ab incidunt labore eligendi
-                cumque corporis aperiam, iusto perferendis expedita hic, minima voluptate minus vel alias dolorem quas!
-                Cum, doloribus?
-                Doloremque ex fugiat unde suscipit? Dignissimos cumque mollitia dolore explicabo perferendis neque quia
-                harum recusandae est doloremque aut dicta temporibus rerum eos ipsa officia voluptates facere natus,
-                quos quidem amet.
-                Commodi assumenda, ab at consequuntur dolorum cum ratione numquam sequi doloribus laboriosam totam
-                aliquam sed facere, expedita error quisquam reprehenderit saepe ipsam. Est quidem itaque at numquam
-                omnis accusamus ut.</p>
+            <img src="../images/club.png" alt="persona leyendo">
+            <p>El Club surge como un deseo de compartir la pasión por la lectura. Cada encuentro está motivado por la búsqueda constante de nuevas interpretaciones a obras clásicas, así como el descubrimientos de nuevos autores.</p>
             <form class="sectionClubUnirse">
                 <label for="clubLectura">Si querés formar parte, dejános tu correo electrónico</label>
                 <input type="email" name="clubLectura" placeholder="Ingrese su correo electrónico">
