--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,37 +18,32 @@
         </div>
         <nav class="navbar navbar-expand-lg align-items-center" id="navbar">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-auto">
-                    <ul>
-                  <li><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
-                  <li><a class="nav-link" href="./libros.html">Libros</a></li>
-                  <li><a class="nav-link" href="./club.html">Club de Lectura</a></li>
-                  <li><a class="nav-link" href="./nosotros.html">Acerca de nosotros</a></li>
-                  <li><a class="nav-link" href="./contacto.html">Contactanos</a></li>
-                </ul>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
+                        <ul>
+                            <li><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li><a class="nav-link" href="./libros.html">Libros</a></li>
+                            <li><a class="nav-link" href="./club.html">Club de Lectura</a></li>
+                            <li><a class="nav-link" href="./nosotros.html">Acerca de nosotros</a></li>
+                            <li><a class="nav-link" href="./contacto.html">Contactanos</a></li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
         <h1>Acerca de nosotros</h1>
-        <section class="construction">
-            <h3>
-                Sitio en construcción</h3>
-            <span> <svg width="50" height="50" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M71.1658 31.6468C69.9983 32.8067 68.4194 33.4577 66.7737 33.4577C65.128 33.4577 63.5491 32.8067 62.3817 31.6468L57.2239 26.4889C56.0629 25.3217 55.4111 23.7423 55.4111 22.0959C55.4111 20.4496 56.0629 18.8702 57.2239 17.7029L68.8984 6.02255C68.9215 6.00033 68.9387 5.97274 68.9486 5.94223C68.9584 5.91173 68.9605 5.87926 68.9548 5.84774C68.949 5.81621 68.9355 5.7866 68.9155 5.76155C68.8955 5.7365 68.8696 5.7168 68.8402 5.70419C61.3043 2.47399 51.5341 4.12015 45.33 10.2797C39.3937 16.1713 39.0559 25.033 41.2301 32.7668C41.539 33.8661 41.5382 35.0294 41.2279 36.1283C40.9175 37.2272 40.3097 38.219 39.4713 38.9943L7.13049 68.5301C6.17631 69.3761 5.40526 70.4083 4.86473 71.5633C4.3242 72.7183 4.02563 73.9717 3.98737 75.2463C3.9491 76.5209 4.17196 77.7899 4.64223 78.9753C5.1125 80.1606 5.82025 81.2372 6.72197 82.139C7.62368 83.0407 8.70031 83.7484 9.88564 84.2187C11.071 84.689 12.34 84.9118 13.6146 84.8736C14.8893 84.8353 16.1426 84.5367 17.2976 83.9962C18.4526 83.4557 19.4848 82.6846 20.3308 81.7304L50.1986 49.3119C50.964 48.4877 51.9393 47.8873 53.0199 47.5751C54.1006 47.2629 55.2458 47.2506 56.3328 47.5396C64.0085 49.5953 72.744 49.209 78.6026 43.4261C84.9097 37.2142 86.2705 26.2346 83.213 19.9509C83.1993 19.9234 83.1792 19.8996 83.1544 19.8814C83.1297 19.8632 83.1009 19.8512 83.0706 19.8462C83.0403 19.8413 83.0092 19.8437 82.98 19.8531C82.9508 19.8625 82.9242 19.8787 82.9024 19.9004L71.1658 31.6468Z"
-                        stroke="#BCAFA6" stroke-width="6.21193" stroke-miterlimit="10" stroke-linecap="round" />
-                    <path
-                        d="M13.3425 78.6245C15.0579 78.6245 16.4485 77.2339 16.4485 75.5186C16.4485 73.8032 15.0579 72.4126 13.3425 72.4126C11.6272 72.4126 10.2366 73.8032 10.2366 75.5186C10.2366 77.2339 11.6272 78.6245 13.3425 78.6245Z"
-                        fill="#BCAFA6" />
-                </svg>
-            </span>
+        <section class="nosotros">
+            <p>INEFABLE</p>
+            <p><em>1. adj. Que no se puede explicar con palabras.</em></p>
+            <br>
+            <p>Así esperamos que sea tu experiencia al visitarnos. Inefable no es solo una librería en la que todos los idiomas y culturas tienen lugar, sino que también ofrecemos un espacio de lectura y encuentro cálido y acogedor, además de un club de lectura que se reúne los primeros viernes de cada mes para compartir nuestra pasión por los libros.</p>
         </section>
     </main>
 
